syntax = "proto3";
package gink;

enum Behavior {
    UNSPECIFIED = 0; // seeing this behavior usually means there's a bug somewhere
    BOX = 1; // only holds on entry at a time, only uses a contains, no key or subject
    SEQUENCE = 2; // entries have a value or pointee but no key, ordered by time
    KEY_SET = 3; // entries have only key, no value, and may be removed with a deletion
    DIRECTORY = 4; // entries have key and also something contained (value or pointee)
    PROPERTY = 9; // entries have a subject and value
    LABEL = 10; // entries have describing and optionally deleting
};
