syntax = "proto3";
package gink;

/**
    Each database instance may have one or more chains that it
    can append commits to.  When a process opens a database, if
    no previously claimed chains are available, it can create a
    new chain.  If the process that created a chain no long exists,
    then that chain may be reclaimed by a new processes.
*/
message Claim {
    uint64 medallion = 1;
    uint64 chain_start = 2;
    uint64 process_id = 3;
    uint64 claim_time = 4;
}
